--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "@nestjs/core": "^8.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.4",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
