--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --respawn ./src/main.ts"
   },
   "repository": {
     "type": "git",
@@ -27,12 +28,14 @@
   "dependencies": {
     "@nestjs/common": "^8.2.4",
     "@nestjs/core": "^8.2.4",
+    "@nestjs/platform-express": "^8.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.4",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
 }
